Jednolita symulacja; zapisywanie projektów; zmiana wczytywania konfiguracji

--- a/Inverter/Inverter.csproj
+++ b/Inverter/Inverter.csproj
@@ -50,6 +50,7 @@
 
 	<ItemGroup>
 	  <PackageReference Include="Microsoft.Maui.Graphics.Text.Markdig" Version="6.0.501" />
+	  <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -57,6 +58,9 @@
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="GenerateInverter\Views\GenerateInverterV.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Sets\ReadySetsV.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	</ItemGroup>
