--- a/Inverter/Inverter.csproj
+++ b/Inverter/Inverter.csproj
@@ -33,10 +33,12 @@
 
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net7.0-maccatalyst|AnyCPU'">
 	  <DefineConstants>$(DefineConstants)TRACE</DefineConstants>
+	  <Deterministic>True</Deterministic>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net7.0-maccatalyst|AnyCPU'">
 	  <DefineConstants>$(DefineConstants)TRACE</DefineConstants>
+	  <Deterministic>True</Deterministic>
 	</PropertyGroup>
 
 	<PropertyGroup>
@@ -45,7 +47,7 @@
 	  <AppxAutoIncrementPackageRevision>True</AppxAutoIncrementPackageRevision>
 	  <AppxSymbolPackageEnabled>False</AppxSymbolPackageEnabled>
 	  <GenerateTestArtifacts>True</GenerateTestArtifacts>
-	  <AppInstallerUri>C:\temp</AppInstallerUri>
+	  <AppInstallerUri>C:\temp\</AppInstallerUri>
 	  <HoursBetweenUpdateChecks>0</HoursBetweenUpdateChecks>
 	  <AppxPackageSigningEnabled>True</AppxPackageSigningEnabled>
 	  <PackageCertificateThumbprint>94E9BDF873EEC48F83A2EE2AB6FF9E23634A27D1</PackageCertificateThumbprint>
@@ -53,6 +55,25 @@
 	  <Description>Program do Wizualizacji Pracy Trójfazowego Trójpoziomowego Falownika Napięcia</Description>
 	  <Company>$(Authors) Politechnika Krakowska Wydział Inżynierii Elektrycznej i Komputerowej</Company>
 	  <Authors>$(AssemblyName) Sławomir Smoter</Authors>
+	  <SignAssembly>False</SignAssembly>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net7.0-android|AnyCPU'">
+	  <Deterministic>True</Deterministic>
+	  <AndroidCreatePackagePerAbi>False</AndroidCreatePackagePerAbi>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net7.0-android|AnyCPU'">
+	  <Deterministic>True</Deterministic>
+	  <AndroidCreatePackagePerAbi>False</AndroidCreatePackagePerAbi>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net7.0-windows10.0.22621.0|AnyCPU'">
+	  <Deterministic>True</Deterministic>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net7.0-windows10.0.22621.0|AnyCPU'">
+	  <Deterministic>True</Deterministic>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -98,6 +119,10 @@
 
 	<ItemGroup>
 	  <None Update="Image\pobrane.png" Link="Image\pobrane.png">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
+	  <None Update="Inverter_TemporaryKey.pfx">
 	    <Pack>True</Pack>
 	    <PackagePath>\</PackagePath>
 	  </None>
