--- a/Inverter/Inverter.csproj
+++ b/Inverter/Inverter.csproj
@@ -48,7 +48,7 @@
 	  <GenerateTestArtifacts>True</GenerateTestArtifacts>
 	  <AppInstallerUri>C:\temp\</AppInstallerUri>
 	  <HoursBetweenUpdateChecks>0</HoursBetweenUpdateChecks>
-	  <AppxPackageSigningEnabled>True</AppxPackageSigningEnabled>
+	  <AppxPackageSigningEnabled>False</AppxPackageSigningEnabled>
 	  <PackageCertificateThumbprint>94E9BDF873EEC48F83A2EE2AB6FF9E23634A27D1</PackageCertificateThumbprint>
 	  <AppxPackageSigningTimestampDigestAlgorithm>SHA256</AppxPackageSigningTimestampDigestAlgorithm>
 	  <Description>Program do Wizualizacji Pracy Trójfazowego Trójpoziomowego Falownika Napięcia</Description>
@@ -77,6 +77,7 @@
 
 	<PropertyGroup>
 	  <TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net7.0-windows10.0.22621.0</TargetFrameworks>
+	  <DefaultLanguage>PL</DefaultLanguage>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -98,12 +99,19 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="CommunityToolkit.Maui" Version="5.0.0" />
 	  <PackageReference Include="Microsoft.Maui.Graphics.Text.Markdig" Version="6.0.501" />
-	  <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+	  <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	</ItemGroup>
 
 	<ItemGroup>
 	  <MauiXaml Update="Display\Views\DisplayV.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Display\Views\PopUpListV.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Display\Views\PopUpSelectListGraphs.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="GenerateInverter\Views\GenerateInverterV.xaml">
